--- a/microService/consumer/pom.xml
+++ b/microService/consumer/pom.xml
@@ -11,6 +11,11 @@
 
     <artifactId>consumer</artifactId>
 
+
+    <properties>
+        <skywalking.version>6.5.0</skywalking.version>
+    </properties>
+
     <dependencies>
         <!--SpringCloud openfeign -->
         <dependency>
@@ -32,6 +37,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!--用于服务被监控-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -45,6 +51,19 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <!--skywalking trace工具包-->
+        <dependency>
+            <groupId>org.apache.skywalking</groupId>
+            <artifactId>apm-toolkit-trace</artifactId>
+            <version>${skywalking.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>1.1.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
