--- a/microService/provider2/pom.xml
+++ b/microService/provider2/pom.xml
@@ -36,7 +36,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <!--prometheus注册-->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>1.1.3</version>
+        </dependency>
     </dependencies>
-
-
 </project>
