--- a/microService/consumer/src/main/resources/application.yml
+++ b/microService/consumer/src/main/resources/application.yml
@@ -8,21 +8,24 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
-    sentinel:
-      transport:
-        #配置Sentinel dashboard地址
-        dashboard: localhost:8080
-        #默认8719端口，假如被占用会自动从8719开始依次+1扫描,直至找到未被占用的端口
-        port: 8719
+#    sentinel:
+#      transport:
+#        #配置Sentinel dashboard地址
+#        dashboard: localhost:8080
+#        #默认8719端口，假如被占用会自动从8719开始依次+1扫描,直至找到未被占用的端口
+#        port: 8719
 
 # 激活Sentinel对Feign的支持
-feign:
-  sentinel:
-    enabled: true
+#feign:
+#  sentinel:
+#    enabled: true
 
-# 无此配置无法被监控
+# 暴露prometheus的接口(*:全部暴露)；暴露metrics.tags
 management:
   endpoints:
     web:
       exposure:
         include: '*'
+  metrics:
+    tags:
+      application: ${spring.application.name}
