--- a/microService/gateway/src/main/resources/application.yml
+++ b/microService/gateway/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       # 开启后网关限流不生效
 #      discovery:
 #        locator:
-#          enabled: true     # 开启从注册中心动态创建路由,以服务的controller匹配/**
+#          enabled: true     # 开启从注册中心动态创建路由,以服务的controller路径匹配-Path的/**
       # 路由
       routes:
         #路由的ID，没有固定规则但要求唯一，一般定为服务名
@@ -36,12 +36,14 @@ spring:
         - id: provider2
           uri: lb://provider2
           predicates:
-          - Path=/provider2
+#          - Path=/provider2/**
+          - After=2020-07-20T11:29:45.121+08:00[Asia/Shanghai]
 
         - id: consumer
           uri: lb://consumer
           predicates:
-          - Path=/consumer
+#          - Path=/consumer/**
+          - After=2020-07-20T11:29:45.121+08:00[Asia/Shanghai]
 
 logging:
   level:
