--- a/microService/consumer/pom.xml
+++ b/microService/consumer/pom.xml
@@ -53,6 +53,10 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>1.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
