--- a/microService/provider/pom.xml
+++ b/microService/provider/pom.xml
@@ -40,5 +40,9 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>1.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
     </dependencies>
 </project>
