--- a/microService/provider2/pom.xml
+++ b/microService/provider2/pom.xml
@@ -37,5 +37,13 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>1.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 </project>
