--- a/microService/Dockerfile
+++ b/microService/Dockerfile
@@ -1,13 +1,4 @@
-FROM ubuntu
-
-RUN apt-get -y update && \
-    apt-get -y install wget && \
-    apt-get -y install openjdk-8-jdk
-
+FROM openjdk:8
 WORKDIR /apps
-
-ADD http://mirrors.hust.edu.cn/apache/skywalking/7.0.0/apache-skywalking-apm-7.0.0.tar.gz .
-
-RUN tar -zxvf apache-skywalking-apm-7.0.0.tar.gz && \
-    rm -f apache-skywalking-apm-7.0.0.tar.gz && \
-    mv apache-skywalking-apm-bin skywalking
+COPY gateway-1.0-SNAPSHOT.jar /apps/gateway.jar
+COPY agent /apps/agent
