--- a/microService/gateway/Dockerfile
+++ b/microService/gateway/Dockerfile
@@ -1,8 +1,8 @@
-FROM basic:1.0
+FROM basic:latest
 COPY gateway-1.0-SNAPSHOT.jar /apps/gateway.jar
-EXPOSE 8080
 EXPOSE 9000
+EXPOSE 11800
 ADD start.sh /apps
 RUN chmod +x /apps/start.sh && \
-    echo "tail -f /dev/null" >> skywalking/bin/startup.sh
-ENTRYPOINT /bin/sh -c /apps/start.sh
+    echo "tail -f /dev/null" >> /apps/start.sh
+ENTRYPOINT /bin/bash /apps/start.sh
