--- a/microService/provider2/Dockerfile
+++ b/microService/provider2/Dockerfile
@@ -1,5 +1,7 @@
-FROM basic:1.0
+FROM basic:latest
 COPY provider2-1.0-SNAPSHOT.jar /apps/provider2.jar
-CMD ["--server.port=8002"]
 EXPOSE 8002
-ENTRYPOINT ["java", "-jar", "/apps/provider2.jar", "-javaagent:/apps/skywalking/agent/skywalking-agent.jar", "-Dskywalking.agent.service_name=provider2"]
+ADD start.sh /apps
+RUN chmod +x /apps/start.sh && \
+    echo "tail -f /dev/null" >> /apps/start.sh
+ENTRYPOINT /bin/bash /apps/start.sh
